Revision history for HTTP-Message

{{$NEXT}}

6.16      2018-03-28 14:09:17Z
    - Update status codes to official IANA list (GH#100) (Theo van Hoesel)

6.15      2018-03-13 13:02:56Z
    - Whenever possible, use an absolute four digit year for Time::Local (GH#97)
    - Add is_cacheable_by_default() (GH#98) (Theo van Hoesel)

6.14      2017-12-20 22:28:48Z
    - Add some useful examples in HTTP::Request (GH #92) (Chase Whitener).
      Batch requests are now explained.
    - PUT and PATCH docs updated (GH #84) (saturdaywalkers)
    - Trim trailing \r from status line so message() doesn't return it (GH #87) (Felipe Gasper)
    - Bring test coverage of HTTP::Config to 100% (GH #85) (Pete Houston)
    - Add 103 Early Hints to HTTP::Status (GH #94) (Tatsuhiko Miyagawa)

6.13      2017-06-20 01:07:03Z
    - Non-TRIAL release of changes found in 6.12

6.12      2017-06-15 18:03:50Z (TRIAL RELEASE)
    - If an object is passed to HTTP::Request, it must provide a canonical()
      method (Olaf Alders)
    - Make sure status messages don't die by checking the status exists before
      checking the value range (Kent Fredric, GH #39)
    - Add a .mailmap file to clean up the contributors list
    - Avoid inconsistent setting of content to undef (Jerome Eteve)
    - Simplify the way some methods are created (Tom Hukins)
    - Remove some indirect object notation (Chase Whitener)
    - Fix example in Pod (Tobias Leich)
    - Add support for HTTP PATCH method (Mickey Nasriachi)

6.11   2015-09-09
    - fix an undefined value warning in HTTP::Headers::as_string

6.10   2015-07-19
    - fix uses of qr/.../m in tests that do not work in 5.8.x

6.09   2015-07-19
    - converted all uses of Test.pm to Test::More
    - fix uninitialized warning in HTTP::Config (RT#105929)

6.08   2015-07-10
    - Resolve new uninitialized warning from
      HTTP::Request::Common::request_type_with_data (RT#105787)

6.07   2015-07-09